Create documentation for raad

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,44 @@
----
-title: Introduction
-description: "Welcome to the home of your new documentation"
----
+RAAD is an electronic health record (EHR) system that is specifically designed for use in low-resource settings. And it includes a number of features that make it suitable for use in challenging environments.
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+RAAD is designed to be easy to use and manage, and it is highly customizable to meet the specific needs of different healthcare organizations. It includes a wide range of features and functionality, including:
 
-## Setting up
 
-The first step to world-class documentation is setting up your editing environnments.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+### Patient registration and management
 
-## Make it yours
 
-Update your docs to your brand and add valuable content for the best user conversion.
+![alt_text](https://lh6.googleusercontent.com/VtvV_BZm8DdQwvI56SwDaRZY6-qmpeRarD7g_-4R0uqLWobQwD7d-mI-7Ehp5UOHz-LZCqvRRz3nLkcTDkJl6t6WUjY5RQ_mMldyDJXjO5BdY5IFIA1_ZEBbaur9Dw39LRHrzeL8_O3avT6teR4yd_0 "image_tooltip")
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+
+### Clinical decision support tools
+
+
+![alt_text](https://lh4.googleusercontent.com/_np2mwHuNZ7fSDinyFmdi44-VEznoiNXDmw5tpNLS30eXBUg17TT4RoVlLDenmhQYIiqa4MlBpPdO92cANd7jiElk6OQEYGkFPvoTnBVGr9oCduEEkegqE_b5uPFPZ6JQGcCXXyPrnPadgbFln9uB7o "image_tooltip")
+
+
+### Laboratory management
+
+
+![alt_text](https://lh5.googleusercontent.com/rfHo2x3riZXrW5t1KOuwTE_GZu8Oaa5fH7lISo182tyHxDrC0JGE1xDCRqUdx7XUOWiJ16WUrJfCitu6FbjPNg8WnJVqbqYjGlPgl8WpGtlL-wr3CLINiexDgCYWt5nubMwLXdzw1KBjOlyTHzPZ9Hg "image_tooltip")
+
+
+### Pharmacy management
+
+
+![alt_text](https://lh3.googleusercontent.com/UAcqYCY34SIX33kTeM2qwpCsXZ_8afLG6tBrAjZb-PFYRKbfVGHba4GYrE1RqXHTpQOicYTW9GeKgiy2_z2Z3QOeENehPMgp-Jfzj2BiFoPJIZkEg39i763MOU8QvdTtnWgKiAiQMjAjtRm-WCnmJv0 "image_tooltip")
+
+
+### Reporting and analytics
+
+
+![alt_text](https://lh4.googleusercontent.com/6rJc99oVhb1tolUqPa7laTWc2-k1DkVWL5aF-ptMGjf0-jIRW-OqStVhvqQxS93scyCZdmwDK3yeuJpujvaZcALHRDp3xeo38zlgsnhnlMmbKIfwoZJ0Naw7FdUQLy-T_UzOsIg-fOy3XgpkQPRLiPM "image_tooltip")
+
+
+### DHIS integration
+
+
+![alt_text](https://lh3.googleusercontent.com/9t4rwZnB9EJ0RFJUAgo_mYqQGyqxSFVDHW6dmeb7y0faNpcQUiWrScb0zZbi29JDFb5qxD4oOmhGwn-ZYS-cOionlUxlSi-cF6TBb8xQHcgoEtWbpDaWJUVxv8XObZJbza0MwX7Gj1eS4A-8FW6je3E "image_tooltip")
+
+RAAD is also highly scalable, so it can be used to support healthcare organizations of all sizes.
+
+This document describes how to deploy the RAAD installer on a Debian[^1] based systems including Windows 10 or later which supports Windows Subsystem for Linux. The installer will install all of the necessary components for RAAD, including RAAD Core, and any additional modules that you have selected.
