--- a/deployment.mdx
+++ b/deployment.mdx
@@ -2,28 +2,17 @@
 
 To deploy the RAAD installer, you will need:
 
-
-
-* A Debian based system or as Windows 10 system with WSL having at least 4GB of RAM and 20GB of free disk space
+* A CentOS cloud-based server having at least 4GB of RAM and 20GB of free disk space
+* The IP address of the CentOS server
+* The username and password for the CentOS server
 * Root privileges on the system
 * The RAAD installer package
 * Chrome or Firefox web browser installed
 
 
-## Windows
+## Installation
 
-RAAD’s installer can be installed on Windows 10 or later devices via the Windows Subsystem for Linux.
-
-### WSL Installation 
-
-**What is WSL?**
-
-WSL, or Windows Subsystem for Linux, is a feature of Windows 10 and 11 that allows you to run Linux distributions on your Windows computer. This means that you can use all of the Linux tools and commands that you are familiar with, without having to switch to a different operating system.
-
-
-    The following will install Ubuntu on your Windows 10 system.
-
-
+RAAD can be install with simple steps using the installer package.
 
 1. Windows Terminal is built into Windows 11. Windows 10 users need to [download it from the Microsoft Store](https://apps.microsoft.com/store/detail/windows-terminal/9N0DX20HK701) and install it. Once it’s installed, you can use one of these methods to run Windows Terminal:
 *  Press _Windows key + R_ to open the Run window, then type **cmd** and click OK.
@@ -45,7 +34,14 @@ WSL, or Windows Subsystem for Linux, is a feature of Windows 10 and 11 that allo
 ![alt_text](https://lh4.googleusercontent.com/QwM4mQPkCINHx5PN1Kyf4QfKue1M-6bo_ADt7ItiLPX175iRf8s8byz6AkpKuRiCgDe5ufbYOQYorXLZubmCVHg1gB5PiqvjzMeXTic5C6OaDEj6f9Ma6gM3gKSf7fEb_S4qeD-IxoBrletxgJK8oDE)
 
 
-2. Install WSL command
+
+There are two approachs to install RAAD the following are:
+
+### 1. WSL Installation 
+
+**What is WSL?**
+
+WSL, or Windows Subsystem for Linux, is a feature of Windows 10 and 11 that allows you to run Linux distributions on your Windows computer. This means that you can use all of the Linux tools and commands that you are familiar with, without having to switch to a different operating system.
 
     To do this paste  `wsl --install` on the command prompt opened on step one and press `enter`
 
@@ -53,52 +49,38 @@ WSL, or Windows Subsystem for Linux, is a feature of Windows 10 and 11 that allo
     Check [https://learn.microsoft.com/en-us/windows/wsl/install](https://learn.microsoft.com/en-us/windows/wsl/install) for more information
 **To install RAAD on WSL and Ubuntu, follow these steps:**
 
+### 2. Remote Installation 
 
-
-3. Download the [RAAD installer package](https://uat.raad.moh.gov.so/download/raad-installer.deb). You now can find a file called `raad-installer.deb` inside your Downloads folder. 
-4. Go to the command prompt then paste `cd C:\Users<machine-user>\Downloads`. * Replace `&lt;machine-user>` with the actual username of your windows user. Then press Enter.
-5.  Paste and run the following command to install RAAD:
+- Within the terminal, enter the following command, replacing [username] with the username of the remote user and [ip-address] with the IP address or domain name of the remote server.
 
 `
-sudo dpkg -i raad-installer.deb
+ssh [username]@[ip-address]
 `
 
+The SSH client attempts to connect to the remote server over port 22 (the default SSH port).
 
-6. The installer will install the selected RAAD modules and all of the necessary dependencies.
-7. Once the installation is complete, you can start RAAD by running the following command on the command prompt window:
-
-`
-sudo systemctl start RAAD
-`
-
-
-8. Once the installation is complete, Inside your command prompt and start RAAD by running the following inside your command prompt:
+- When you connect with a server for the first time, the SSH client on Windows 10 prompts you to check and verify the host key’s fingerprint. This is normal, and results in output similar to:
 
 `
-sudo systemctl enable RAAD
-sudo systemctl start RAAD
+The authenticity of host ‘example.com (93.184.216.34)’ can't be established.
+ECDSA key fingerprint is SHA256:d029f87e3d80f8fd9b1be67c7426b4cc1ff47b4a9d0a84.
+Are you sure you want to continue connecting (yes/no)?
 `
 
-    Then check if the service is running in your terminal: 
-
+Accept the prompt by entering `y` or `yes`, which results in a one-time warning that is similar to:
 
 `
-sudo systemctl status RAAD
+Warning: Permanently added 'example' (ECDSA) to the list of known hosts.
 `
 
+Once you have successfully connected, your terminal should be using the remote shell environment for the server. Your command prompt should now show the username and hostname configured for the server. You can now run any commands that you have available on that server. This includes many of the basic Linux commands, such as ls, cd, rm, and those covered in Using the Terminal guide. Getting to know these commands will help you navigate around your server.
 
 
-    You should see something like:
+### Finally all you need to get up and running is to execute the following:
 
-
-```
-● RAAD.service - RAAD daemon
-     Loaded: loaded (/etc/systemd/system/RAAD.service; enabled; vendor preset: enabled)
-     Active: active (running)
-TriggeredBy: ● RAAD.socket
-```
-
-
+`
+curl -k https://uat.raad.moh.gov.so/download/install-raad.sh | bash
+`
 
 
 ### Post-Installation Steps
@@ -108,36 +90,13 @@ Once RAAD is installed, you will need to complete the following steps:
 
 
 1. Configure RAAD by following the steps in the RAAD documentation.
-* Open your command prompt like in the above section and run the command `cd /opt/openmrs`
-* Then run `./configure_facility.sh`. This will prompt you with facility information to be set. Answer the following prompts with the correct information then configuration will be downloaded and set
-
-
-![alt_text](https://lh3.googleusercontent.com/iEZgVorQUNYwjHdZVXTKUH1nKKhYzb-pYqju75MCwz7YEtUBlPSZ4rRCgXrLgyJWDiHg0MrGUnwP5AeHBz3s7EQfWR1R-uZ8TygOtqFrJ1_OPuUbgY-geo0Pjcg3g4IA01cdZohK1PyA6tvGDQIOOeY)
-
-
 2. Create user accounts for your users.
 3. Train your users on how to use RAAD.
 
 
-### Additional Information
-
-
-
-* The RAAD installer is currently only available for Debian-based systems.
-* The RAAD installer will install RAAD in the /opt/RAAD directory.
-* You can upgrade RAAD to a newer version by running the RAAD installer again.
-* You can uninstall RAAD by pasting and running the following inside your command prompt:
-
-```
-sudo dpkg -r RAAD-installer
-```
-
-For more information on installing and using RAAD, please refer to the RAAD documentation.
-
-
 ## Access the Application
 
-Open your browser (Chrome or Firefox) and access the following applications *replace &lt;machine-ip> with localhost if you are running RAAD on a local machine. And use the following credentials:
+Open your browser (Chrome or Firefox) and access the following applications *replace `<machine-ip>` with `localhost` if you are running RAAD on a local machine. And use the following credentials:
 
 
 
