Add explanation of intialization time

--- a/deployment.mdx
+++ b/deployment.mdx
@@ -82,6 +82,10 @@ Once you have successfully connected, your terminal should be using the remote s
 curl -k https://uat.raad.moh.gov.so/download/install-raad.sh | bash
 `
 
+### Initialization time
+
+The first time you install RAAD, it will take about 5 to 10 minutes to initialize. It create some necessary files and folders, and activate all of its modules. After the first initialization, the software will start up much faster.
+
 
 ### Post-Installation Steps
 
