Add installer command for sudoer user other than root

--- a/deployment.mdx
+++ b/deployment.mdx
@@ -79,7 +79,7 @@ Once you have successfully connected, your terminal should be using the remote s
 ### Finally all you need to get up and running is to execute the following:
 
 `
-curl -k https://uat.raad.moh.gov.so/download/install-raad.sh | bash
+curl -k https://uat.raad.moh.gov.so/download/install-raad.sh | sudo bash
 `
 
 ### Initialization time
