Add raad configuration to deployment documentation

--- a/deployment.mdx
+++ b/deployment.mdx
@@ -93,7 +93,11 @@ Once RAAD is installed, you will need to complete the following steps:
 
 
 
-1. Configure RAAD by following the steps in the RAAD documentation.
+1. Configure RAAD by the following steps.
+    - Goto `/raad/configuration/` where you will be greated with this page
+    ![alt-text](images/image23.png)
+    - After you've filled in all the necessary informations hit `save and continue`
+    ![alt-text](images/image24.png)
 2. Create user accounts for your users.
 3. Train your users on how to use RAAD.
 
