--- a/deployment.mdx
+++ b/deployment.mdx
@@ -53,7 +53,7 @@ When prompted with a github token like the following:
 Password for 'https://GitHubUser@github.com':
 `
 
-Paste `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` and press enter
+Paste `token` and press enter
 
 ### Upgrading RAAD
 
@@ -71,7 +71,7 @@ sudo bash /opt/ehr_docker/bin/raad-update
 Password for 'https://GitHubUser@github.com':
 `
 
-Paste `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` and press enter
+Paste `token` and press enter
 
 ### Initialization time
 
