add a proper place holder for token

--- a/deployment.mdx
+++ b/deployment.mdx
@@ -53,7 +53,7 @@ When prompted with a github token like the following:
 Password for 'https://GitHubUser@github.com':
 `
 
-Paste `token` and press enter
+Paste `<github-access-token>` and press enter
 
 ### Upgrading RAAD
 
@@ -65,13 +65,13 @@ RAAD can be upgraded to the newest version using the following simple steps.
 sudo bash /opt/ehr_docker/bin/raad-update
 `
 
-- When prompted with a github token like the following:
+- When prompted with a github <github-access- like> the following:
 
 `
 Password for 'https://GitHubUser@github.com':
 `
 
-Paste `token` and press enter
+Paste `<github-access-token>` and press enter
 
 ### Initialization time
 
