--- a/deployment.mdx
+++ b/deployment.mdx
@@ -2,13 +2,12 @@
 
 To deploy the RAAD installer, you will need:
 
-* A CentOS cloud-based server having at least 4GB of RAM and 20GB of free disk space
-* The IP address of the CentOS server
-* The username and password for the CentOS server
+
+* A Ubuntu based server with at least 4GB of RAM and 20GB of free disk space
+* The username and password for the server
 * Root privileges on the system
 * The RAAD installer package
 * Chrome or Firefox web browser installed
-
 
 ## Installation
 
