Add instruction to run facility info sync after raad configuratrion

--- a/deployment.mdx
+++ b/deployment.mdx
@@ -95,6 +95,7 @@ Once RAAD is installed, you will need to complete the following steps:
     ![alt-text](images/image23.png)
     - After you've filled in all the necessary informations hit `save and continue`
     ![alt-text](images/image24.png)
+    - To sync facility information to Cloud run the following command `sudo bash /opt/openmrs/configure_facility.sh`
 2. Rebuild search index ** Note wait for initialization to finish
     - To do that first go to `https://<machine-ip/localhost>/openmrs/` And login with the credentions on `Access the application` section. Then navigate to `admin`
 
